--- a/retos_codewars.ipynb
+++ b/retos_codewars.ipynb
@@ -6,7 +6,7 @@
       "name": "retos_codewars.ipynb",
       "provenance": [],
       "collapsed_sections": [],
-      "authorship_tag": "ABX9TyMtdCBOrhwrlX9m1uVDiyDk",
+      "authorship_tag": "ABX9TyMR+Ga4HtntZSeJgM3Gplwu",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -46,7 +46,7 @@
       "metadata": {
         "id": "HMs5a9dzwGqU"
       },
-      "execution_count": null,
+      "execution_count": 1,
       "outputs": []
     },
     {
@@ -59,7 +59,7 @@
       "metadata": {
         "id": "m0oQOoWzwQOW"
       },
-      "execution_count": null,
+      "execution_count": 2,
       "outputs": []
     },
     {
@@ -81,7 +81,7 @@
       "metadata": {
         "id": "NbiWLS2I5pY2"
       },
-      "execution_count": null,
+      "execution_count": 3,
       "outputs": []
     },
     {
@@ -96,7 +96,7 @@
       "metadata": {
         "id": "Td49FUjd-EHP"
       },
-      "execution_count": null,
+      "execution_count": 4,
       "outputs": []
     },
     {
@@ -121,7 +121,7 @@
       "metadata": {
         "id": "GLP7FhyxEzjk"
       },
-      "execution_count": null,
+      "execution_count": 5,
       "outputs": []
     },
     {
@@ -138,117 +138,58 @@
       "metadata": {
         "id": "GsuwjqS_3EBt"
       },
-      "execution_count": null,
+      "execution_count": 6,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "def anagrams(word, words):\n",
+        "    #your code here\n",
+        "    result= []\n",
+        "    di = {}\n",
+        "    di_s = []\n",
+        "    for i in word:\n",
+        "        di[i] = word.count(i)\n",
+        "\n",
+        "    for word_in_list in words:\n",
+        "        inter = {}\n",
+        "        for i in word_in_list:\n",
+        "            inter[i] = word_in_list.count(i)\n",
+        "\n",
+        "        di_s.append(inter)\n",
+        "    for x,c in zip(di_s,range(len(di_s))):\n",
+        "        if x == di:\n",
+        "          result.append(words[c])\n",
+        "    return result"
+      ],
+      "metadata": {
+        "id": "ZOSmFpjn41XG"
+      },
+      "execution_count": 18,
       "outputs": []
     },
     {
       "cell_type": "code",
       "source": [
         ""
-      ],
-      "metadata": {
-        "id": "lTDGkwFr4FT5"
-      },
-      "execution_count": null,
-      "outputs": []
-    },
-    {
-      "cell_type": "code",
-      "source": [
-        "di == di_s[0]"
-      ],
-      "metadata": {
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        },
-        "id": "ZOSmFpjn41XG",
-        "outputId": "9adbd230-0f45-43ae-c658-2e40eb072af5"
-      },
-      "execution_count": null,
-      "outputs": [
-        {
-          "output_type": "execute_result",
-          "data": {
-            "text/plain": [
-              "False"
-            ]
-          },
-          "metadata": {},
-          "execution_count": 225
-        }
-      ]
-    },
-    {
-      "cell_type": "code",
-      "source": [
-        "word='abba'\n",
-        "words= ['aabb', 'abcd', 'bbaa', 'dada']\n",
-        "di={}\n",
-        "di_s=[]\n",
-        "for i in word:\n",
-        "  di[i] = word.count(i)\n",
-        "        \n",
-        "  for y in words:\n",
-        "    inter = {}\n",
-        "    for i in y:\n",
-        "      inter[i] = word.count(i)\n",
-        "    di_s.append(inter)"
       ],
       "metadata": {
         "id": "F8Tnlq7z5d0L"
       },
-      "execution_count": null,
+      "execution_count": 20,
       "outputs": []
     },
     {
       "cell_type": "code",
       "source": [
-        "di_s"
-      ],
-      "metadata": {
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        },
-        "id": "P7BvVPsA9Nrw",
-        "outputId": "65dfb444-7677-45e0-921e-e2ecd322fe69"
-      },
-      "execution_count": null,
-      "outputs": [
-        {
-          "output_type": "execute_result",
-          "data": {
-            "text/plain": [
-              "[{'a': 2, 'b': 2},\n",
-              " {'a': 2, 'b': 2, 'c': 0, 'd': 0},\n",
-              " {'a': 2, 'b': 2},\n",
-              " {'a': 2, 'd': 0},\n",
-              " {'a': 2, 'b': 2},\n",
-              " {'a': 2, 'b': 2, 'c': 0, 'd': 0},\n",
-              " {'a': 2, 'b': 2},\n",
-              " {'a': 2, 'd': 0},\n",
-              " {'a': 2, 'b': 2},\n",
-              " {'a': 2, 'b': 2, 'c': 0, 'd': 0},\n",
-              " {'a': 2, 'b': 2},\n",
-              " {'a': 2, 'd': 0},\n",
-              " {'a': 2, 'b': 2},\n",
-              " {'a': 2, 'b': 2, 'c': 0, 'd': 0},\n",
-              " {'a': 2, 'b': 2},\n",
-              " {'a': 2, 'd': 0}]"
-            ]
-          },
-          "metadata": {},
-          "execution_count": 227
-        }
-      ]
-    },
-    {
-      "cell_type": "markdown",
-      "source": [
         ""
       ],
       "metadata": {
-        "id": "nFB6plOHBD0N"
-      }
+        "id": "P7BvVPsA9Nrw"
+      },
+      "execution_count": 20,
+      "outputs": []
     },
     {
       "cell_type": "code",
@@ -256,40 +197,10 @@
         ""
       ],
       "metadata": {
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        },
-        "id": "8-hW2W_M9zXo",
-        "outputId": "22cd8492-bd73-44b8-a326-75edf9ca8756"
+        "id": "8-hW2W_M9zXo"
       },
-      "execution_count": null,
-      "outputs": [
-        {
-          "output_type": "execute_result",
-          "data": {
-            "text/plain": [
-              "[{'a': 2, 'b': 2},\n",
-              " {'a': 2, 'b': 2, 'c': 0, 'd': 0},\n",
-              " {'a': 2, 'b': 2},\n",
-              " {'a': 2, 'd': 0},\n",
-              " {'a': 2, 'b': 2},\n",
-              " {'a': 2, 'b': 2, 'c': 0, 'd': 0},\n",
-              " {'a': 2, 'b': 2},\n",
-              " {'a': 2, 'd': 0},\n",
-              " {'a': 2, 'b': 2},\n",
-              " {'a': 2, 'b': 2, 'c': 0, 'd': 0},\n",
-              " {'a': 2, 'b': 2},\n",
-              " {'a': 2, 'd': 0},\n",
-              " {'a': 2, 'b': 2},\n",
-              " {'a': 2, 'b': 2, 'c': 0, 'd': 0},\n",
-              " {'a': 2, 'b': 2},\n",
-              " {'a': 2, 'd': 0}]"
-            ]
-          },
-          "metadata": {},
-          "execution_count": 228
-        }
-      ]
+      "execution_count": 20,
+      "outputs": []
     },
     {
       "cell_type": "code",
