--- a/retos_codewars.ipynb
+++ b/retos_codewars.ipynb
@@ -6,7 +6,7 @@
       "name": "retos_codewars.ipynb",
       "provenance": [],
       "collapsed_sections": [],
-      "authorship_tag": "ABX9TyMR+Ga4HtntZSeJgM3Gplwu",
+      "authorship_tag": "ABX9TyNRWgo5eVR7FwrJw6rLFkqy",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -46,7 +46,7 @@
       "metadata": {
         "id": "HMs5a9dzwGqU"
       },
-      "execution_count": 1,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -59,7 +59,7 @@
       "metadata": {
         "id": "m0oQOoWzwQOW"
       },
-      "execution_count": 2,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -81,7 +81,7 @@
       "metadata": {
         "id": "NbiWLS2I5pY2"
       },
-      "execution_count": 3,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -96,7 +96,7 @@
       "metadata": {
         "id": "Td49FUjd-EHP"
       },
-      "execution_count": 4,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -121,7 +121,7 @@
       "metadata": {
         "id": "GLP7FhyxEzjk"
       },
-      "execution_count": 5,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -138,7 +138,7 @@
       "metadata": {
         "id": "GsuwjqS_3EBt"
       },
-      "execution_count": 6,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -166,49 +166,252 @@
       "metadata": {
         "id": "ZOSmFpjn41XG"
       },
-      "execution_count": 18,
+      "execution_count": null,
       "outputs": []
     },
     {
       "cell_type": "code",
       "source": [
-        ""
+        "def create_phone_number(n):\n",
+        "    #your code here\n",
+        "    first = n[0:3]\n",
+        "    second = n[3:6]\n",
+        "    third = n[6::]\n",
+        "    space = [\" \"]\n",
+        "    line = [\"-\"]\n",
+        "    m = [\"(\"]\n",
+        "    a=[\")\"]\n",
+        "    \n",
+        "    total = m + first + a + space + second + line + third\n",
+        "             \n",
+        "    return ''.join([str(i) for i in total])"
       ],
       "metadata": {
         "id": "F8Tnlq7z5d0L"
       },
-      "execution_count": 20,
+      "execution_count": null,
       "outputs": []
     },
     {
       "cell_type": "code",
       "source": [
-        ""
+        "def create_phone_number(n):\n",
+        "    return \"({}{}{}) {}{}{}-{}{}{}{}\".format(*n)"
       ],
       "metadata": {
-        "id": "P7BvVPsA9Nrw"
+        "id": "1qCMPOEqXrw5"
       },
-      "execution_count": 20,
+      "execution_count": null,
       "outputs": []
     },
     {
       "cell_type": "code",
       "source": [
-        ""
-      ],
-      "metadata": {
-        "id": "8-hW2W_M9zXo"
-      },
-      "execution_count": 20,
-      "outputs": []
-    },
-    {
-      "cell_type": "code",
-      "source": [
-        ""
+        "def likes(names):\n",
+        "    # your code here\n",
+        "    if len(names) == 0:\n",
+        "        result = 'no one likes this'        \n",
+        "    elif len(names) == 1 :\n",
+        "        result = \"{} likes this\".format(names[0])\n",
+        "    elif len(names) == 2:\n",
+        "        result =\"{} and {} like this\".format(names[0],names[1])\n",
+        "    elif len(names) == 3:\n",
+        "        result =\"{}, {} and {} like this\".format(names[0],names[1],names[2])\n",
+        "    else:\n",
+        "        result =\"{}, {} and {} others like this\".format(names[0],names[1],len(names)-2)\n",
+        "    return result"
       ],
       "metadata": {
         "id": "BwR3qLqn91r5"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "text = 'hello'"
+      ],
+      "metadata": {
+        "id": "pItuQWIsZv4P"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "def encode(st):\n",
+        "  new_st = ''\n",
+        "  for x,c in zip(st,range(len(st))):\n",
+        "    if x == 'a':\n",
+        "      new_letter = '1'\n",
+        "    elif x == 'e':\n",
+        "       new_letter = '2'\n",
+        "    elif x == 'i':\n",
+        "      new_letter = '3'\n",
+        "    elif x == 'o':\n",
+        "      new_letter = '4'\n",
+        "    elif x == 'u':\n",
+        "      new_letter = '5'\n",
+        "    else:\n",
+        "      new_letter = x\n",
+        "\n",
+        "    new_st += new_letter\n",
+        "  return new_st\n",
+        "        #st[c] = new_letter"
+      ],
+      "metadata": {
+        "id": "2XT94B_Kj61W"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        ""
+      ],
+      "metadata": {
+        "id": "yfmlX9N9j_lm"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "def decode(st):\n",
+        "  new_st_deco = ''\n",
+        "  for x,c in zip(st,range(len(st))):\n",
+        "    if x == '1':\n",
+        "      new_letter = 'a'\n",
+        "    elif x == '2':\n",
+        "       new_letter = 'e'\n",
+        "    elif x == '3':\n",
+        "      new_letter = 'i'\n",
+        "    elif x == '4':\n",
+        "      new_letter = 'o'\n",
+        "    elif x == '5':\n",
+        "      new_letter = 'u'\n",
+        "    else:\n",
+        "      new_letter = x\n",
+        "\n",
+        "    new_st_deco += new_letter\n",
+        "  return new_st_deco"
+      ],
+      "metadata": {
+        "id": "7CZrdwdUlBsh"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "def kebabize(string):\n",
+        "    #your code here\n",
+        "    new = [x for x in string if x.isnumeric() ==False]\n",
+        "    result = []\n",
+        "    for x,c in zip(new,range(len(new))):\n",
+        "        if x.islower() == True:\n",
+        "            result.append(x)\n",
+        "\n",
+        "        elif x.isupper() == True:\n",
+        "            if c == 0:\n",
+        "                result.append(x.lower())\n",
+        "            else:\n",
+        "                result.append('-')\n",
+        "                result.append(x.lower())\n",
+        "    return \"\".join([x for x in result])"
+      ],
+      "metadata": {
+        "id": "JDoDCjbbNzrH"
+      },
+      "execution_count": 44,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "'1'+'1'"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 35
+        },
+        "id": "9ur-K5KN2pQ9",
+        "outputId": "afe5408b-66f4-44b4-bc96-12a4bb105f1e"
+      },
+      "execution_count": 45,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "'11'"
+            ],
+            "application/vnd.google.colaboratory.intrinsic+json": {
+              "type": "string"
+            }
+          },
+          "metadata": {},
+          "execution_count": 45
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "coins = [1,2,3]\n",
+        "coins.sort(reverse=True)\n",
+        "money = 5\n",
+        "result = 0\n",
+        "for x in coins:\n",
+        "  if (money - x) >= 0:\n",
+        "    result += 1\n",
+        "    money -= x"
+      ],
+      "metadata": {
+        "id": "xR4DoKCp6gPX"
+      },
+      "execution_count": 13,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "result"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "surFLzCxmvDQ",
+        "outputId": "2bfffdbc-3d7e-4414-f110-09d47dd9f7dc"
+      },
+      "execution_count": 14,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "2"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 14
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        ""
+      ],
+      "metadata": {
+        "id": "Llq5D2Wwoa7u"
       },
       "execution_count": null,
       "outputs": []
