--- a/retos_codewars.ipynb
+++ b/retos_codewars.ipynb
@@ -6,7 +6,7 @@
       "name": "retos_codewars.ipynb",
       "provenance": [],
       "collapsed_sections": [],
-      "authorship_tag": "ABX9TyNRWgo5eVR7FwrJw6rLFkqy",
+      "authorship_tag": "ABX9TyMOlnc0yK+cljy7qLl05hLp",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -334,7 +334,25 @@
     {
       "cell_type": "code",
       "source": [
-        "'1'+'1'"
+        "def find_missing_letter(chars):\n",
+        "    import string\n",
+        "    new_chars = \"\".join(chars)\n",
+        "\n",
+        "    if new_chars.isupper() == False:\n",
+        "        abecedario = string.ascii_lowercase\n",
+        "    elif new_chars.isupper() == True:\n",
+        "         abecedario = string.ascii_uppercase\n",
+        "\n",
+        "    inicio = abecedario.find(new_chars[0])\n",
+        "    final = len(new_chars) + inicio\n",
+        "    new_abecedario = abecedario[inicio:final]\n",
+        "\n",
+        "    for x in range(len(new_abecedario)):\n",
+        "         if new_abecedario[x] != new_chars[x]:\n",
+        "                esta = new_abecedario[x]\n",
+        "                break\n",
+        "        \n",
+        "    return esta"
       ],
       "metadata": {
         "colab": {
@@ -411,7 +429,7 @@
         ""
       ],
       "metadata": {
-        "id": "Llq5D2Wwoa7u"
+        "id": "Nvj47PDswuay"
       },
       "execution_count": null,
       "outputs": []
