--- a/retos_codewars.ipynb
+++ b/retos_codewars.ipynb
@@ -6,7 +6,7 @@
       "name": "retos_codewars.ipynb",
       "provenance": [],
       "collapsed_sections": [],
-      "authorship_tag": "ABX9TyNCenWhKQmM+st1qkCi+F/i",
+      "authorship_tag": "ABX9TyMJuwIOxUPFi3kwhkNVlMcd",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -382,10 +382,51 @@
     {
       "cell_type": "code",
       "source": [
-        ""
+        "def descending_order(num):\n",
+        "    # Bust a move right here\n",
+        "    int_to_list = [int(x) for x in str(num)]\n",
+        "    int_to_list.sort(reverse= True)\n",
+        "    return int(\"\".join(str(i) for i in int_to_list))"
       ],
       "metadata": {
         "id": "xR4DoKCp6gPX"
+      },
+      "execution_count": 19,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "descending_order(15)"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "_yqoRtHMJX1j",
+        "outputId": "c39ccc52-ab8b-4b86-dd4c-139cd86d9089"
+      },
+      "execution_count": 20,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "51"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 20
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        ""
+      ],
+      "metadata": {
+        "id": "WRyGBDCpJab1"
       },
       "execution_count": null,
       "outputs": []
