--- a/retos_codewars.ipynb
+++ b/retos_codewars.ipynb
@@ -6,7 +6,7 @@
       "name": "retos_codewars.ipynb",
       "provenance": [],
       "collapsed_sections": [],
-      "authorship_tag": "ABX9TyMJuwIOxUPFi3kwhkNVlMcd",
+      "authorship_tag": "ABX9TyMEF89lpMFleSgcJEg4IB1L",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -397,26 +397,53 @@
     {
       "cell_type": "code",
       "source": [
-        "descending_order(15)"
+        "def remove_char(s):\n",
+        "    #your code here\n",
+        "    \n",
+        "    return s[1:-1]"
+      ],
+      "metadata": {
+        "id": "_yqoRtHMJX1j"
+      },
+      "execution_count": 27,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "def binary_array_to_number(arr):\n",
+        "    # your code\n",
+        "    return int(\"\".join(str(i) for i in arr), 2)"
+      ],
+      "metadata": {
+        "id": "WRyGBDCpJab1"
+      },
+      "execution_count": 51,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        ""
       ],
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "id": "_yqoRtHMJX1j",
-        "outputId": "c39ccc52-ab8b-4b86-dd4c-139cd86d9089"
+        "id": "j8ZuDKILUyPn",
+        "outputId": "35180966-62e0-44de-9726-1caca60c7221"
       },
-      "execution_count": 20,
+      "execution_count": 52,
       "outputs": [
         {
           "output_type": "execute_result",
           "data": {
             "text/plain": [
-              "51"
+              "2"
             ]
           },
           "metadata": {},
-          "execution_count": 20
+          "execution_count": 52
         }
       ]
     },
@@ -426,7 +453,18 @@
         ""
       ],
       "metadata": {
-        "id": "WRyGBDCpJab1"
+        "id": "fxyB9k86RGCF"
+      },
+      "execution_count": 52,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        ""
+      ],
+      "metadata": {
+        "id": "5yHhfIx-RUE7"
       },
       "execution_count": null,
       "outputs": []
