--- a/retos_codewars.ipynb
+++ b/retos_codewars.ipynb
@@ -6,7 +6,7 @@
       "name": "retos_codewars.ipynb",
       "provenance": [],
       "collapsed_sections": [],
-      "authorship_tag": "ABX9TyMEF89lpMFleSgcJEg4IB1L",
+      "authorship_tag": "ABX9TyPdmPvGwesDroqqCOraWJlI",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -391,7 +391,7 @@
       "metadata": {
         "id": "xR4DoKCp6gPX"
       },
-      "execution_count": 19,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -405,7 +405,7 @@
       "metadata": {
         "id": "_yqoRtHMJX1j"
       },
-      "execution_count": 27,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -418,34 +418,21 @@
       "metadata": {
         "id": "WRyGBDCpJab1"
       },
-      "execution_count": 51,
+      "execution_count": null,
       "outputs": []
     },
     {
       "cell_type": "code",
       "source": [
-        ""
+        "def square_digits(num):\n",
+        "    to_convert = [str(int(x)**2) for x in str(num)]\n",
+        "    return int(\"\".join(to_convert))"
       ],
       "metadata": {
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        },
-        "id": "j8ZuDKILUyPn",
-        "outputId": "35180966-62e0-44de-9726-1caca60c7221"
+        "id": "j8ZuDKILUyPn"
       },
-      "execution_count": 52,
-      "outputs": [
-        {
-          "output_type": "execute_result",
-          "data": {
-            "text/plain": [
-              "2"
-            ]
-          },
-          "metadata": {},
-          "execution_count": 52
-        }
-      ]
+      "execution_count": 15,
+      "outputs": []
     },
     {
       "cell_type": "code",
@@ -455,7 +442,7 @@
       "metadata": {
         "id": "fxyB9k86RGCF"
       },
-      "execution_count": 52,
+      "execution_count": 14,
       "outputs": []
     },
     {
@@ -465,6 +452,17 @@
       ],
       "metadata": {
         "id": "5yHhfIx-RUE7"
+      },
+      "execution_count": 14,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        ""
+      ],
+      "metadata": {
+        "id": "7qYhZdXFKDob"
       },
       "execution_count": null,
       "outputs": []
