--- a/retos_codewars.ipynb
+++ b/retos_codewars.ipynb
@@ -6,7 +6,7 @@
       "name": "retos_codewars.ipynb",
       "provenance": [],
       "collapsed_sections": [],
-      "authorship_tag": "ABX9TyPdmPvGwesDroqqCOraWJlI",
+      "authorship_tag": "ABX9TyPXap2oOYLQfwj4QTsNSQyR",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -437,32 +437,164 @@
     {
       "cell_type": "code",
       "source": [
-        ""
-      ],
-      "metadata": {
-        "id": "fxyB9k86RGCF"
-      },
-      "execution_count": 14,
-      "outputs": []
-    },
-    {
-      "cell_type": "code",
-      "source": [
-        ""
-      ],
-      "metadata": {
-        "id": "5yHhfIx-RUE7"
-      },
-      "execution_count": 14,
-      "outputs": []
-    },
-    {
-      "cell_type": "code",
-      "source": [
-        ""
+        "def open_or_senior(data):\n",
+        "    lista = []\n",
+        "    for x in data:\n",
+        "        if x[1] > 7 and x[0] >= 55:\n",
+        "            new = \"Senior\"\n",
+        "        else:\n",
+        "            new = \"Open\"\n",
+        "            \n",
+        "        lista.append(new)\n",
+        "    return lista"
       ],
       "metadata": {
         "id": "7qYhZdXFKDob"
+      },
+      "execution_count": 32,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "def greet(name):\n",
+        "    #Good Luck (like you need it)\n",
+        "    return \"Hello, {} how are you doing today?\".format(name)"
+      ],
+      "metadata": {
+        "id": "4cPSE0O9Ni7b"
+      },
+      "execution_count": 33,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "def opposite(number):\n",
+        "    # your solution here\n",
+        "    return -number"
+      ],
+      "metadata": {
+        "id": "euGEN3Y3NpE1"
+      },
+      "execution_count": 34,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "def to_jaden_case(string):\n",
+        "    # ...\n",
+        "    return \" \".join(x.capitalize() for x in string.split(\" \"))"
+      ],
+      "metadata": {
+        "id": "h1QzcTz8OWrb"
+      },
+      "execution_count": 35,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "def string_to_number(s):\n",
+        "    return int(s)"
+      ],
+      "metadata": {
+        "id": "Zc1UvQKUQX_Y"
+      },
+      "execution_count": 36,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "def string_to_number(s):\n",
+        "    # ... your code here\n",
+        "    return int(s)\n",
+        "    "
+      ],
+      "metadata": {
+        "id": "-wjnrPNJSuSX"
+      },
+      "execution_count": 46,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "def digitize(n):\n",
+        "    return [int(x) for x in str(n)][::-1]"
+      ],
+      "metadata": {
+        "id": "uG2l-OvSRVfr"
+      },
+      "execution_count": 47,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "def friend(x):\n",
+        "    #Code\n",
+        "    return [i for i in x if len(i) == 4]"
+      ],
+      "metadata": {
+        "id": "yiA8t_N4Ru8t"
+      },
+      "execution_count": 53,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "def get_sum(a,b):\n",
+        "    #good luck!\n",
+        "    if b > a:\n",
+        "        c = b + 1\n",
+        "        x = a\n",
+        "    else:\n",
+        "        c = a + 1\n",
+        "        x = b\n",
+        "    return a if a==b else sum(range(x,c))"
+      ],
+      "metadata": {
+        "id": "ytLC0biNTepV"
+      },
+      "execution_count": 66,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "def bool_to_word(bool):\n",
+        "    return \"Yes\" if bool else \"No\""
+      ],
+      "metadata": {
+        "id": "lOqBxnUUVsrT"
+      },
+      "execution_count": 67,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "def get_count(sentence):\n",
+        "    vowels = 'aeiou'\n",
+        "    return len([x for x in sentence if x in vowels])"
+      ],
+      "metadata": {
+        "id": "ip6mdtteZStR"
+      },
+      "execution_count": 77,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        ""
+      ],
+      "metadata": {
+        "id": "ZApsCKLCaV3J"
       },
       "execution_count": null,
       "outputs": []
