--- a/retos_codewars.ipynb
+++ b/retos_codewars.ipynb
@@ -6,7 +6,7 @@
       "name": "retos_codewars.ipynb",
       "provenance": [],
       "collapsed_sections": [],
-      "authorship_tag": "ABX9TyPXap2oOYLQfwj4QTsNSQyR",
+      "authorship_tag": "ABX9TyP5pcheMNau+6gUdia/OH86",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -591,10 +591,272 @@
     {
       "cell_type": "code",
       "source": [
-        ""
+        "def find_smallest_int(arr):\n",
+        "    # Code here\n",
+        "    return min(arr)"
       ],
       "metadata": {
         "id": "ZApsCKLCaV3J"
+      },
+      "execution_count": 78,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "def longest(a1, a2):\n",
+        "    # your code\n",
+        "    different = list(set(a1 + a2))\n",
+        "    different.sort(reverse=False)\n",
+        "    return \"\".join(different)"
+      ],
+      "metadata": {
+        "id": "HDL3goKjkFtV"
+      },
+      "execution_count": 93,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "def find_needle(haystack):\n",
+        "    # your code here\n",
+        "    return \"found the needle at position {}\".format(sum([x for x,c in enumerate(haystack) if c == 'needle']))"
+      ],
+      "metadata": {
+        "id": "0NwsUx7JlDwo"
+      },
+      "execution_count": 101,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "x = [1,2,32,44,5,123,4213,12,1]\n",
+        "x.index(1)"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "OuSzii7Blhas",
+        "outputId": "2f9cfc3d-af61-424a-f68e-5abedc66ca0a"
+      },
+      "execution_count": 102,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "0"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 102
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "def basic_op(operator, value1, value2):\n",
+        "    #your code here\n",
+        "  op = {'+': lambda x, y: x + y,\n",
+        "        '-': lambda x, y: x - y,\n",
+        "        '*': lambda x, y: x * y,\n",
+        "        '/': lambda x, y: x / y\n",
+        "        }\n",
+        "    \n",
+        "  return op[operator](value1,value2)"
+      ],
+      "metadata": {
+        "id": "HFjEk1oPpXfc"
+      },
+      "execution_count": 107,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "def repeat_str(repeat, string):\n",
+        "    return string*repeat"
+      ],
+      "metadata": {
+        "id": "tBA-ponvqs1Y"
+      },
+      "execution_count": 108,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "def invert(lst):\n",
+        "    return [-x for x in lst]"
+      ],
+      "metadata": {
+        "id": "bsjEgZ5CtDWw"
+      },
+      "execution_count": 109,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "def duplicate_count(text):\n",
+        "    # Your code goes here\n",
+        "    repetidos=[]\n",
+        "    c=0\n",
+        "    for x in text.lower():\n",
+        "        if x not in repetidos:\n",
+        "            repetidos.append(x)\n",
+        "        else:\n",
+        "            repetidos.append(x)\n",
+        "            \n",
+        "            if repetidos.count(x) > 1 and repetidos.count(x) <= 2:\n",
+        "                c+=1\n",
+        "            \n",
+        "    return c"
+      ],
+      "metadata": {
+        "id": "3gHHYpLNtWwh"
+      },
+      "execution_count": 114,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "x = [1,2,3,1,2,3,4,1,321,3,4,1,123,4,1,23,3]\n",
+        "x.count(1)\n",
+        "[i for i,c in enumerate(x) if x.count(c) > 2]"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "KGL5mPcS0Nys",
+        "outputId": "999465fe-fdcf-470e-b98c-d7b731838d25"
+      },
+      "execution_count": 120,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "[0, 2, 3, 5, 6, 7, 9, 10, 11, 13, 14, 16]"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 120
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "new=[]\n",
+        "delete = []\n",
+        "for c,i in enumerate(x):\n",
+        "  if i not in new or new.count(i) == 1:\n",
+        "    new.append(i)\n",
+        "  elif new.count(i) >= 2:\n",
+        "    delete.append(c)"
+      ],
+      "metadata": {
+        "id": "QoIAj2WW2sUA"
+      },
+      "execution_count": 138,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "new"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "IP_xoP0V4n8l",
+        "outputId": "5d78cd5c-f66e-460a-ab38-a37e062c7a07"
+      },
+      "execution_count": 139,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "[1, 2, 3, 1, 2, 3, 4, 321, 4, 123, 23]"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 139
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "delete"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "yzDeDKSR6gQJ",
+        "outputId": "0ec69efa-ed36-4f98-fe6f-2451c205190c"
+      },
+      "execution_count": 140,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "[7, 9, 11, 13, 14, 16]"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 140
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "for i in delete:\n",
+        "  new_x = x - x[delete[i]]\n",
+        "new_x"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 202
+        },
+        "id": "jCmhGNXy61ZB",
+        "outputId": "424ef50f-2b00-4fbb-87b3-6b7ea4ff5448"
+      },
+      "execution_count": 146,
+      "outputs": [
+        {
+          "output_type": "error",
+          "ename": "IndexError",
+          "evalue": "ignored",
+          "traceback": [
+            "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+            "\u001b[0;31mIndexError\u001b[0m                                Traceback (most recent call last)",
+            "\u001b[0;32m<ipython-input-146-5b23cc03ca57>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[1;32m      1\u001b[0m \u001b[0;32mfor\u001b[0m \u001b[0mi\u001b[0m \u001b[0;32min\u001b[0m \u001b[0mdelete\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 2\u001b[0;31m   \u001b[0mnew_x\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mx\u001b[0m \u001b[0;34m-\u001b[0m \u001b[0mx\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0mdelete\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0mi\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m      3\u001b[0m \u001b[0mnew_x\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+            "\u001b[0;31mIndexError\u001b[0m: list index out of range"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        ""
+      ],
+      "metadata": {
+        "id": "yARVPyDg99om"
       },
       "execution_count": null,
       "outputs": []
